[package]
name = "falling-sand"
version = "0.1.0"
authors = ["Rick <rick-van-dam@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]
production = []

[dependencies.web-sys]
version = "0.3.22"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
  'console',
  'ImageData',
  'CanvasRenderingContext2d',
  'Performance', 
  'PerformanceTiming'
]

[dependencies]
js-sys = "0.3.22"
wasm-bindgen = "0.2.45"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2.45"

[profile.release]
#lto = true